--- a/cluster/configs/spark-defaults.conf
+++ b/cluster/configs/spark-defaults.conf
@@ -19,6 +19,7 @@ spark.master                    spark://spark-master:7077
 spark.driver.extraLibraryPath   /opt/hadoop/lib/native
 spark.app.id                    K8sSpark
 spark.eventLog.enabled          true
+spark.eventLog.dir              /tmp/spark-events
 spark.serializer                org.apache.spark.serializer.KryoSerializer
 spark.driver.memory             2g
 spark.driver.cores              1
