--- a/cluster/configs/spark-defaults.conf
+++ b/cluster/configs/spark-defaults.conf
@@ -15,13 +15,9 @@
 # limitations under the License.
 #
 
-spark.master                    spark://spark-master:7077
-spark.driver.extraLibraryPath   /opt/hadoop/lib/native
-spark.app.id                    K8sSpark
-spark.eventLog.enabled          true
-spark.eventLog.dir              /tmp/spark-events
-spark.serializer                org.apache.spark.serializer.KryoSerializer
-spark.driver.memory             2g
-spark.driver.cores              1
-spark.executor.memory           2g
-spark.executor.cores            1
+spark.master                            spark://spark-master:7077
+spark.driver.extraLibraryPath           /opt/hadoop/lib/native
+spark.app.id                            KubernetesSpark
+spark.eventLog.enabled                  true
+spark.eventLog.dir                      /tmp/spark-events
+spark.serializer                        org.apache.spark.serializer.KryoSerializer
