--- a/cluster/kubernetes/minikube-ingress.yaml
+++ b/cluster/kubernetes/minikube-ingress.yaml
@@ -3,34 +3,15 @@ kind: Ingress
 metadata:
   name: minikube-ingress
   annotations:
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/satisfy: "any"
 spec:
-  defaultBackend:
-    service:
-      name: default-http-backend
-      port:
-        number: 80
-  ingressClassName: nginx
   rules:
-    - host: spark-kubernetes
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: spark-master
-                port: 
-                  number: 8080
-    - host: spark-kubernetes
-      http:
-        paths:
-          - path: /ui/
-            pathType: Prefix 
-            backend:
-              service:
-                name: spark-master
-                port: 
-                  number: 7077
+  - host: spark-master
+    http:
+      paths:
+        - pathType: Prefix
+          path: /
+          backend:
+            service:
+              name: spark-master
+              port:
+                number: 7077
