--- a/cluster/kubernetes/spark-executor-deployment.yaml
+++ b/cluster/kubernetes/spark-executor-deployment.yaml
@@ -21,3 +21,7 @@ spec:
           resources:
             requests:
               cpu: 100m
+              memory: 1Gi
+            limits:
+              cpu: 1000m
+              memory: 1Gi
