--- a/cluster/kubernetes/spark-master-deployment.yaml
+++ b/cluster/kubernetes/spark-master-deployment.yaml
@@ -22,3 +22,7 @@ spec:
           resources:
             requests:
               cpu: 100m
+              memory: 1Gi
+            limits:
+              cpu: 1000m
+              memory: 1Gi
